Changes in version 0.0.3 - UNRELEASED:
 * Bug 21055: Fall back gracefully if the Adwaita theme is not present.
 * Bug 20791: Fetch install/update metadata using onions.
 * Bug 20979: runtime/cgo: pthread_create failed: Resource temporarily
   unavailable.
 * Bug 20993: Handle the lock file better.
 * Bug 20970: Firefox crashes if the security slider is left at the default
   on certain pages.
 * Bug 20973: Silence Gdk warnings on systems with integrated png loader.
 * Bug 20806: Try even harder to exclude gstreamer.
 * Disable the firefox safe mode prompt, because it is nonsensical when
   applied to Tor Browser.
 * Add a `-h` command line flag that prints usage.
 * Remove the unused `pulseAudioBox` identifier.
 * Store the version of the sandbox in the config file, and re-Sync() the
   config, and reinstall the `mozilla.cfg` when things change.
 * Include the git revision as a static asset, and display it as part of
   the `--version` output.
 * Fix a nil pointer deref on SIGINT received durring bootstrap.
 * Don't remove the PaX overrides ever, because until the JIT gets rewritten
   Firefox won't play nice with MPROTECT.

Changes in version 0.0.2 - 2016-12-10:
 * Bug #20780: Shuffle and persist the ordering of internal bridges.
 * Bug #20806: Add an option to disable including `libavcodec.so` in the
   firefox container.
 * Bug #20899: Incorrect x86_64 ld.so flag check in dynlib.
 * Allow MADV_FREE in the firefox seccomp profile.

Changes in version 0.0.1 - 2016-12-09:
 * Initial release.